--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/maksymaf/chat-app#readme",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "mongoose": "^8.18.1",
     "socket.io": "^4.8.1"
   }
 }
